--- a/Aula02-LP/style.css
+++ b/Aula02-LP/style.css
@@ -12,6 +12,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    overflow-x: hidden;
 }
 
 nav{
@@ -19,7 +20,20 @@ nav{
     width: 100%;
     box-shadow: #000000be 0px 5px 20px;
     z-index: 999 !important;
+    animation: fromTop 1s ease-in-out;
 }
+
+@keyframes fromTop {
+    0%{
+       
+        transform: translateY(-100px);
+    }
+    100%{
+       
+        transform: translateY(0px);
+    }
+}
+
 
 .logo{
     width: 80px;
@@ -48,7 +62,20 @@ nav{
     overflow: hidden;
     box-shadow: #6ab705d5 0px 5px 15px;
     border-radius: 100%;
+    animation: fromSide2 1s ease-in-out;
 }
+
+@keyframes fromSide2 {
+    0%{
+        opacity: 0;
+        transform: translateX(-400px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
 
 .photoS1{
   width: 450px;
@@ -67,6 +94,18 @@ nav{
 
 .s1-right{
     width: 600px;
+    animation: fromSide 1s ease-in-out;
+}
+
+@keyframes fromSide {
+    0%{
+        opacity: 0;
+        transform: translateX(400px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(0px);
+    }
 }
 
 #s2{
@@ -80,10 +119,99 @@ nav{
     padding: 50px;
 }
 
+
+.card-body h5{
+    color: #090909;
+    font-weight: bold;
+}
+.card-body p{
+    color: #000000ea;
+    font-weight: 300;
+}
+
 #s3{
-    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: auto;
-    padding-top:10vh;
+    padding: 20vh 0px 20vh 0px;
+}
+
+.formulario{
+    background-color: #70969481;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: #6ab705d5 0px 5px 15px;
+    width: 500px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1vh;
+    border: 2px solid #ffffff;
+}
+
+.formulario label{
+    width: 100%;
+    text-align: left;
+    margin-bottom: -10px;
+    margin-left: 30px;
+    font-weight: bold;
+}
+
+.formulario input{
+    width: 100%;
+    border-radius: 999px;
+    padding: 10px;
+    border: none;
+    background: none;
+    border: 2px solid #ffffff;
+    color: #ffffff;
+}
+
+.formulario input::placeholder{
+  color: #0d380a;
+}
+
+.btn{
+    width: 100%;
+    border-radius: 999px !important;
+    padding: 10px !important;
+    border: none;
+    border: 2px solid #ffffff !important;
+    background-color: transparent !important;
+    transition: all 200ms ease-in-out;
+    color: #ffffff !important;
+}
+
+.btn:hover{
+  background: #ffffff !important;
+  color: #2f520b !important;
+  transition: all 200ms ease-in-out;
+}
+
+footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2vw;
+    width: 100%;
+    padding: 20px;
+}
+
+footer a img{
+    width: 50px;
+    height: auto;
+    opacity: 0.5;
+    border-radius: 100%;
+    transition: all 200ms linear;
+}
+
+footer a img:hover{
+    transform: scale(1.3) rotate(15deg);
+    box-shadow: #6ab705d5 0px 5px 15px;
+    opacity: 1;
 }
 
 @media (width <= 1000px){
@@ -103,5 +231,9 @@ nav{
         width: 100%;
         padding: 20px;
         margin-top: -2vh;
+    }
+    .formulario{
+        width: 90%;
+        padding: 20px;
     }
 }
